# Train-Screensaver

./: .gitignore  LICENSE  README.md
.github/workflows/: building-and-testing.yml  dotnet-core-testing.yml
Client/: Train-Screensaver-Client.sln
Client/Train-Screensaver-Client/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ScreensaverWindow.xaml  ScreensaverWindow.xaml.cs  Train-Screensaver-Client.csproj
Client/Train-Screensaver-Client-Test/: Train-Screensaver-Client-Test.csproj  UnitTest1.cs
Client/Train-Screensaver-Client/Logic/: Config.cs  Path.cs  Train.cs
Client/Train-Screensaver-Client/Networking/: Connection.cs
Client/Train-Screensaver-Client/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
Server/train-screensaver-server/: Cargo.toml
Server/train-screensaver-server/src/: main.rs
