[package]
name = "train-screensaver-server"
version = "0.1.0"
authors = ["Jan Bronec <49397215+XelfXendr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
